Wed Oct 11 17:37:57 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added method OmIndexerNode::set_empty_output(), useful as
	  a shorthand for set_output("foo",
	  OmIndexerMessage(new OmIndexerData()))

Wed Oct 11 17:35:49 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* New method is_empty() for OmIndexerData to easily check for
	  empty messages.

Wed Oct 11 17:27:49 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Parameter strings can be kept inside <param></param> instead of
	  the <param value=""> attribute.  The former doesn't mangle
	  whitespace.

Wed Oct 11 11:17:52 BST 2000 Olly Betts

	* Added profiling variant of DEBUGCALL() and DEBUGCALL_STATIC(),
	  turned on with --enable-debug=profile switch to configure.
	  Reported information needs more work.

Tue Oct 10 17:03:07 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fix bug in temporary implementation of quartz_table - now stores
	  records with weird characters correctly.

Tue Oct 10 14:41:49 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fix documentation comment in database.h

Tue Oct 10 14:14:40 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added quartz_block_size parameter - and pass it down to the
	  constructor of a QuartzDiskTable, ready for use when the Btree
	  manager is added.

	* Removed old quartz_{diffs,modifications}.{cc,h} files - obselete.

Tue Oct 10 12:14:20 BST 2000 Olly Betts

	* Documents should now fetch in parallel pipelines with the remote
	  backend.
 
Mon Oct  9 18:13:14 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Quartz now stores general database information in record database.
	  Very close to allocating new document ID's correctly.

	* Quartz database initialisation code is separated out of table
	  manager.

	* {un,}pack_uint32 functions changed to {un,}pack_uint templates -
	  should work on different data type sizes.  Work towards using